# docs-conda-jupyter-lab

./: .gitignore  README.md  environment.yml  jupyter_lab_init.ps1  package.json  pyproject.toml
docs_conda_jupyter_lab/: dump_simple_str_to_tree.py
docs_conda_jupyter_lab/pull_repo_v0/: install_miniconda_auto.sh  setup_project.sh
notebook_docs/: javascript_notebook.ipynb  print_yaml_utils.py  python_init_experiment.ipynb  yaml_md_formatted.ipynb
notebook_docs/experiments/: live_template_defaults_wrapper_test.py  python_function_params.py  python_function_params_test.py  treelib_demo.py
notebook_docs/experiments/yaml_parser_exp/: sample-escapes.yaml  yaml_tut.ipynb
notebook_docs/hyper-v/: reset_img_hyperv.py  stop_copy_vm.ps1
notebook_docs/kvm/: bash_kvm_utils.sh  hyper_kvm.sh  kvm_cloud_init_tutorial.ipynb  kvm_install_multiple_vms.sh  user-data.yaml
notebook_docs/kvm/ssh_config_tests/: know_hosts.ssh.config  ssh_config_known_hosts.sh
old_env/: environment_v0.yml  environment_v1.yml
static/: bash_completion
